@@ -1,0 +1,8 @@
+=======================
+journalism.computations
+=======================
+
+.. automodule:: journalism.computations
+    :members:
+    :undoc-members:
+    :show-inheritance:
