@@ -1,8 +1,0 @@
-====================
-journalism.computers
-====================
-
-.. automodule:: journalism.computers
-    :members:
-    :undoc-members:
-    :show-inheritance:
