@@ -1,0 +1,20 @@
+=======
+Ranking
+=======
+
+Ranking is a complicated science. Journalism strives to find a balance between simple, intuitive ranking and flexibility when you need it.
+
+Percentile rank
+===============
+
+"Percentile rank" is a bit of a misnomer. Really, this is the percentile in which each value in a column is located. This column can be computed for your data using the :class:`.PercentileRank` computation:
+
+.. code-block:: Python
+
+    from journalism import PercentileRank
+
+    new_table = table.compute([
+        ('percentile_rank', PercentileRank('value')
+    ])
+
+Note that there is no entirely standard method for computing percentiles. The percentiles computed in this manner may not agree with those generated by other programes. See the :class:`.Percentiles` class documentation for implementation details.
