@@ -3,6 +3,7 @@
 from journalism.aggregators import *
 from journalism.columns import *
 from journalism.column_types import *
+from journalism.computations import *
 from journalism.exceptions import *
 from journalism.table import Table
 from journalism.tableset import TableSet
