@@ -1,6 +1,7 @@
 0.5.0
 -----
 
+* Add PercentileRank computation and usage example to cookbook. (#152)
 * Add indexed change example to cookbook. (#151)
 * Add annual change example to cookbook. (#150)
 * Column.summarize now invokes Aggregations.
